#23 В Картці Пацієнта немає автозгенерованого коду Картки; #21 При додаванні нового Пацієнта немає кнопок, Зберегти, Зберегти і Вийти; #17 При додаванні нових записів в Карту Пацієнта не видно нових доданих записів;

--- a/docnote/docnote.csproj
+++ b/docnote/docnote.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Resources\PeriodsRadioButtons.cs" />
     <Compile Include="Resources\SelectAllTextBoxBehavior.cs" />
     <Compile Include="Resources\SexConverter.cs" />
+    <Compile Include="Resources\BoolInverterConverter.cs" />
     <Compile Include="ViewModel\CardEntryWindowVM.cs" />
     <Compile Include="ViewModel\DoctorWindowVM.cs" />
     <Compile Include="ViewModel\HospitalWindowVM.cs" />
