FormWindow - [Save] button error fixed

--- a/docnote/docnote.csproj
+++ b/docnote/docnote.csproj
@@ -90,6 +90,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Address.cs" />
     <Compile Include="Model\Card.cs" />
     <Compile Include="Model\CardEntry.cs" />
