--- a/docnote/packages.config
+++ b/docnote/packages.config
@@ -3,5 +3,6 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="MahApps.Metro" version="1.2.4.0" targetFramework="net451" />
+  <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.1.0" targetFramework="net451" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net451" />
 </packages>
