--- a/docnote/docnote.csproj
+++ b/docnote/docnote.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Model\IDataService.cs" />
     <Compile Include="Model\ModelInitializer.cs" />
     <Compile Include="Model\Patient.cs" />
+    <Compile Include="Resources\BoolToSexConverter.cs" />
     <Compile Include="Resources\DateConverter.cs" />
     <Compile Include="Resources\ComboBoxConverter.cs" />
     <Compile Include="Resources\EnumBooleanConverter.cs" />
