--- a/docnote/App.config
+++ b/docnote/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ConnectionStringDocnoteDB" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=docnoteDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ConnectionStringDocnoteDB" connectionString="data source=(localdb)\MSSQLLocalDB;initial catalog=docDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
